# aiflow

./: Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml
.github/: .release-please-manifest.json  release-please-config.json  release-please.yml
.github/workflows/: ci.yaml  publish.yaml
crates/aiflow/: CHANGELOG.md  Cargo.toml  README.md  ai.rs  aiflow.rs  message.rs  openai.rs  tool.rs  util.rs
crates/aiflow/openai/: async_openai.rs  openai_responses.rs
crates/aiflow/tool/: executor.rs  extract.rs
