[package]
name = "aiflow"
version = "0.2.0"
description = "Rust library for AI message streaming and tool integration."
authors = ["Randolf C."]
repository = "https://github.com/jrandolf/aiflow"
categories = ["science"]
keywords = ["llm", "ai", "openai"]
edition.workspace = true
license.workspace = true


[lib]
name = "aiflow"
path = "aiflow.rs"

[dependencies]
anyhow.workspace = true
assert2.workspace = true
async-openai.workspace = true
bigdecimal.workspace = true
derive_builder.workspace = true
futures.workspace = true
genawaiter.workspace = true
openai_responses.workspace = true
repair_json.workspace = true
reqwest-eventsource.workspace = true
rustc-hash.workspace = true
schemars.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
